--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Goodnessokoye/Basic-User-System#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "joi": "^17.3.0"
   }
 }
